--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -12,6 +12,10 @@ framework:
         cookie_secure: auto
         cookie_samesite: lax
         storage_factory_id: session.storage.factory.native
+    http_client:
+        scoped_clients:
+            weather.client:
+                base_uri: 'https://api.open-meteo.com/'
 
     #esi: true
     #fragments: true
