--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,5 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+weather_client:
+    path: /v1/forecast
