--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -14,7 +14,7 @@ framework:
         storage_factory_id: session.storage.factory.native
     http_client:
         scoped_clients:
-            weather.client:
+            weatherClient:
                 base_uri: 'https://api.open-meteo.com/'
 
     #esi: true
