--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=ec47f13cc63f3d4d9562df25dc085d6b
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:root@127.0.0.1:8889/where_do_we_train"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/where_do_we_train"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
